# cheesy-toast-archive-manager

./: .gitignore  .prettierignore  LICENSE  README.md  eslint.config.ts  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/archive/: backend_libarchive.rs  backend_sevenz.rs  backend_unrar.rs  backend_zip.rs  mod.rs  writer.rs  writer_libarchive.rs  writer_sevenz.rs  writer_zip.rs
src-tauri/src/encoding/: decoder.rs  encoder.rs  mod.rs
src/components/: FileList.vue  Sidebar.vue
src/stores/: archive.ts
