[package]
name = "cheesy-toast-archive-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["lance1416"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cheesy_toast_archive_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cheesy Toast Core Engine
zip = "9.0.0-pre2"           # Pure Rust ZIP parsing (raw bytes access)
sevenz-rust2 = "0.21"        # Pure Rust 7z read/write (LZMA, LZMA2, AES-256)
libarchive2 = "0.2.1"        # libarchive bindings (tar, gz)
unrar = "0.5.8"              # FFI bindings for RAR5 support

# Encoding & Concurrency
encoding_rs = "0.8.35"       # The encoding fix (GBK/Shift-JIS -> UTF-8)
chardetng = "1.0.0"          # Encoding detection heuristic
rayon = "1.12.0"             # Thread-pool for parallel compression

# Error handling
thiserror = "2.0.18"
tokio = "1.52.3"
futures = "0.3.32"

[dependencies.tempfile]
version = "3.27.0"
